components/scss/Header.scss
@import '../../theme/theme';

.header {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin: 30px 50px;

  .header-content {
    h1 {
      font-size: 24px;
      font-weight: bold;
    }
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    text-align: center;
    height: 180px;
    padding: 30px;
  }

  hr {
    border-top: 1px solid $highlight;
    width: 100%;
  }
}

.header-period {
  color: $highlight;
}

